fix: template spacing

--- a/cmd/configs/templates/mpls.go.tmpl
+++ b/cmd/configs/templates/mpls.go.tmpl
@@ -1,9 +1,9 @@
 {{define "mpls" -}}
-{{range .Interfaces -}}
-{{if eq .Role "infrastructure" -}}
+    {{- range .Interfaces }}
+        {{- if eq .Role "infrastructure" }}
 set protocols mpls interface {{.IFD}}.{{.IFL}}
-{{end -}}
-{{end -}}
+        {{- end }}
+    {{- end }}
 set protocols mpls lsp R1_TO_R2 to 10.1.0.2
 set protocols mpls lsp R1_TO_R3 to 10.1.0.3
 set protocols mpls lsp R1_TO_R4 to 10.1.0.4
